# llvm_clang_instrument_example

./: .gitignore  CMakeLists.txt  README.md  README_en.md  create_ir.sh  run.sh
instrumentation/: CMakeLists.txt  instrument.cpp  instrumentModulePass.cpp
rtlib/: CMakeLists.txt  rtlib.cpp
test/: demo.cpp  demo.ll
